# estrutura-workshop

./: .gitignore  README.md  main.py  pyproject.toml
