[tool.poetry]
name = "ws-estrutura"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["DiegoEstEngDados <estudos19860620@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
